scss/_main/_chrome.scss
// Chrome navigation with logo, navigation, and search.
//
// .white     - Use white navigation text and search field (with subtle drop shadow).
// .floating  - Navigation should float above following elements on the page.
//
// No styleguide reference.
.chrome--nav {
  width: 100%;
  margin-bottom: 36px;
  overflow: hidden;

  @include media($mobile) {
    body &.is-visible {
      display: block;
      position: fixed;
      top: 0;
      width: 100%;
      height: 100%;
      background: $off-black;
      z-index: 9997; // above everything else, below modals

      .menu {
        clear: both;
        display: block;
        position: static;
        width: auto;
        height: auto;
        background: none;
        margin-top: 72px;

        @include media($tall-mobile) {
          margin-top: 90px;
        }
      }

      a {
        color: #fff;
      }
    }
  }

  @include media($tablet) {
    padding: 18px 0;
  }

  // Use white navigation text and search field (with subtle drop shadow).
  &.white {
    .hamburger {
      color: #fff;
    }

    @include media($tablet) {
      a {
        color: #fff;
        text-shadow: 0 1px 3px rgba(#000, 0.3);
      }

      .secondary-nav input[type="search"] {
        color: #fff;
        border: 1px solid #fff;
        box-shadow: 0 1px 3px rgba(#000, 0.3);
        background-image: url("assets/images/search_light.png");

        @include hidpi {
          background-image: url("assets/images/search_light@2x.png");
        }
      }
    }
  }

  // Navigation should float above following elements on the page.
  &.floating {
    position: absolute;
    top: 0;
    margin-bottom: 0;
    z-index: 1;
  }

  a {
    color: $off-black;
    text-decoration: none;
    text-shadow: 0 1px 0 rgba(#fff, 0.2);
  }

  // DoSomething.org logo container
  .logo {
    float: left;
    padding: 9px;

    @include media($tablet) {
      position: static;
      min-width: 96px;
      padding: 0 18px;
      text-align: center;

      @include span-columns(2);
    }

    img {
      width: 80px;
      height: 70px;
    }
  }

  // Mobile "hamburger" menu toggle
  .hamburger {
    float: right;
    font-size: 32px;
    text-decoration: none;
    margin: 9px;
    padding: 18px 9px;
    @include icomoon-icon;

    @include media($tablet) {
      display: none;
    }
  }

  // Contents of menu, toggled on-and-off on mobile.
  .menu {
    display: none;

    @include media($tablet) {
      display: block;
    }
  }

  // Primary navigation elements (such as "Explore Campaigns").
  .primary-nav {
    list-style-type: none;
    padding: 0;

    li {
      line-height: 1.4;
      font-size: 18px;
      text-align: center;
      padding: 18px 0;

      @include media($tablet) {
        float: left;
        display: block;
        text-align: left;
        margin: 0 3.5% 0 0;
        padding: 22px 0;
        border-bottom: 0;
      }

      @include media($desktop) {
        padding: 12px 0;
        margin: 0 5% 0 0;
      }
    }

    a {
      display: block;
    }

    strong {
      display: block;
      font-size: $font-regular;
      font-weight: $weight-bold;

      @include media($tablet) {
        > span { display: none; }
      }

      @include media($desktop) {
        > span { display: inline; }
      }
    }

    span {
      font-size: $font-small;

      @include media($tablet) {
        display: none;
      }

      @include media($desktop) {
        display: block;
      }
    }
  }

  // Secondary navigation elements (such as search or "Log In").
  .secondary-nav {
    position: fixed;
    bottom: 0;
    width: 100%;
    margin-right: 18px;

    @include media($tablet) {
      position: static;
      float: right;
      width: auto;
    }

    ul {
      display: block;
      list-style-type: none;
      overflow: hidden;
      padding: 0;
    }

    li {
      font-size: 18px;
      line-height: 1.4;
      text-align: center;
      padding: 27px 0;
      box-sizing: border-box;

      @include media($tablet) {
        float: left;
        display: block;
        text-align: left;
        padding: 17px 0;
        border-bottom: 0;
      }
    }

    .searchfield {
      padding: 0 18px;

      @include media($tablet) {
        padding: 17px 18px;
      }

    }

    input[type="search"] {
      background-color: transparent;
      background-image: url("assets/images/search_light.png");
      box-shadow: 0 1px 0 rgba(#000, 0.2);
      padding-top: 5px;
      padding-bottom: 5px;
      @include transition(width 0.5s);

      @include hidpi {
        background-image: url("assets/images/search_light@2x.png");
      }

      @include media($tablet) {
        width: 110px;
        background-image: url("assets/images/search_dark.png");
        border: 1px solid $off-black;
        box-shadow: 0 1px 0 rgba(#fff, 0.2);

        @include hidpi {
          background-image: url("assets/images/search_dark@2x.png");
        }
      }

      @include media($desktop) {
        width: 200px;
      }
    }

    a {
      display: block;
      font-weight: bold;
      padding: 6px 14px;
    }

    // @TODO: Temporary; will likely change to a border but this works well for now.
    @include media($tablet) {
      .account {
        > a {
          position: relative;

          &:after {
            background-color: #fff;
            content: "";
            height: 18px;
            margin-top: -9px;
            position: absolute;
            right: 0;
            top: 50%;
            width: 1px;
          }
        }
      }
    }
  }
}


// Main content wrapper.
//
// No styleguide reference.
.chrome--wrapper {
  position: relative;
  width: 100%;
}

// Chrome footer with social links & footer menus.
//
// No styleguide reference.
.chrome--footer {
  width: 100%;
  background: #000;
  margin: 0 auto;

  @include media($tablet) {
    padding: 18px;
  }

  h4 {
    position: relative;
    color: #fff;
    margin-bottom: 0;
    padding: 0 18px;
    margin: 0;
    cursor: pointer;

    &:after {
      @include icomoon-icon;
      content: "\e609";
      color: $med-gray;
      font-size: 32px;
      position: absolute;
      right: 4px;
      top: -0.36px;
      @include transform(rotate(0));
      @include transition-property(transform);
      @include transition-duration(0.25s);
    }

    @include media($tablet) {
      cursor: auto;
      margin: 18px 0 9px;
      padding: 0;

      &:after {
        content: "";
      }
    }
  }

  ul {
    height: auto;
    list-style-type: none;
    padding: 4px;
    @include transition(height 0.25s, padding 0.5s);

    @include media($tablet) {
      padding: 0;
    }
  }

  li {
    line-height: 18px;
    margin-bottom: 4px;
  }

  a {
    display: block;
    color: $med-gray;
    font-size: 14px;
    padding: 4px 14px;

    &:hover {
      color: #fff;
    }

    @include media($tablet) {
      padding: 0;
    }
  }
}

.col {
  padding: 9px 0;

  @include media($tablet) {
    @include span-columns(3);
    margin-bottom: 36px;
  }

  &.is-collapsed {
    h4:after {
      @include transform(rotate(-90deg));
    }

    ul {
      overflow: hidden;
      padding: 0 4px;
      height: 0;
    }

    @include media($tablet) {
      h4:after {
        content: "";
      }

      ul {
        height: auto;
        padding: 0;
        @include transition(none);
      }
    }
  }
}

.help, .knowus, .about {
  border-top: 1px solid $dark-gray;

  @include media($tablet) {
    border-top: 0;
    border-bottom: 0;
  }
}

.about {
  border-bottom: 1px solid $dark-gray;

  @include media($tablet) {
    border-bottom: 0;
    @include omega;
  }
}

// Social media icon links.
.social {
  text-align: center;

  // Mobile design (separate markup to re-position below menu).
  // @TODO: Gross. Let's see if we can clean this up in future iterations.
  &.mobile {
    padding: 9px 0;

    @include media($tablet) {
      display: none;
    }
  }

  // Tablet and desktop markup (separate markup to re-position in first column).
  &.tablet {
    display: none;

    @include media($tablet) {
      display: block;
    }
  }

  @include media($tablet) {
    float: left;
    border-top: 0;
    margin-top: 30px;
    text-align: left;
    @include span-columns(7);
  }

  li {
    display: inline-block;
    margin-right: 0;

    @include media($tablet) {
      margin-right: 16px;
    }
  }

  .social-link {
    @include icomoon-icon;
    font-size: 24px;
    text-decoration: none;

    &:hover {
      text-decoration: none;
    }
  }
}

.subfooter {
  display: block;
  clear: both;
  font-size: $font-small;
  border-top: 1px solid $dark-gray;
  padding: 9px 0;
  @include row;

  a {
    display: inline;
    font-size: 1em;
  }

  .utility {
    text-align: center;
    list-style-type: none;

    @include media($tablet) {
      float: right;
      text-align: left;
      margin-right: 14px;
    }

    li {
      display: inline;
    }

    a {
      margin: 0 9px;

      @include media($tablet) {
        margin: 0 18px 0 0;
      }
    }
  }
}

